--- a/pages/19950.html
+++ b/pages/19950.html
@@ -1163,7 +1163,7 @@ margin-left: 0em;
 <li><a href='#references'>References</a></li>
 <ul>
 <li><a href='#general'>General</a></li>
-<li><a href='#classification_of_mbranes'>Classification of M-branes</a></li>
+<li><a href='#for_mbrane_charge_quantization'>For M-brane charge quantization</a></li>
 </ul>
 </ul>
 </div>
@@ -1229,9 +1229,9 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id="classification_of_mbranes">Classification of M-branes</h3>
+<h3 id="for_mbrane_charge_quantization">For M-brane charge quantization</h3>
 
-<p>Discussion of <a class="existingWikiWord" href="/nlab/show/M-brane">M-brane</a> physics in terms of equivariant cohomotopy</p>
+<p>Discussion of <a class="existingWikiWord" href="/nlab/show/M-brane">M-brane</a> <a class="existingWikiWord" href="/nlab/show/charge+quantization">charge quantization</a> in <a class="existingWikiWord" href="/nlab/show/equivariant+cohomotopy">equivariant cohomotopy</a>:</p>
 
 <ul>
 <li>
@@ -1250,14 +1250,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on November 22, 2018 at 01:56:02.
+  Last revised on November 22, 2018 at 02:33:16.
   See the <a href="https://ncatlab.org/nlab/history/equivariant cohomotopy" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/equivariant+cohomotopy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/equivariant+cohomotopy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+cohomotopy/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/equivariant+cohomotopy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+cohomotopy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/equivariant cohomotopy/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
