--- a/pages/3260.html
+++ b/pages/3260.html
@@ -630,7 +630,35 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#in_topological_spaces">In topological spaces</a><ul><li><a href="#homotopy"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-Homotopy</a></li><li><a href="#HomotopyTheory">Homotopy theory of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-spaces</a></li><li><a href="#InfGTop"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(\infty,1)</annotation></semantics></math>-category of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-equivariant spaces</a></li><li><a href="#global_equivariant_homotopy_theory">Global equivariant homotopy theory</a></li></ul></li><li><a href="#in_more_general_model_categories">In more general model categories</a><ul><li><a href="#in_stack_toposes">In <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>∞</mn></mrow><annotation encoding="application/x-tex">\infty</annotation></semantics></math>-stack <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(\infty,1)</annotation></semantics></math>-toposes</a></li></ul></li><li><a href="#Properties">Properties</a><ul><li><a href="#topos"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(\infty,1)</annotation></semantics></math>-topos</a></li><li><a href="#stabilization">Stabilization</a></li><li><a href="#RelationToInfinityActions">Relation to ∞-Actions (fine and coarse equivariance)</a></li></ul></li><li><a href="#examples">Examples</a><ul><li><a href="#equivariance"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mn>1</mn></msup></mrow><annotation encoding="application/x-tex">S^1</annotation></semantics></math>-Equivariance</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#in_topological_spaces'>In topological spaces</a></li>
+<ul>
+<li><a href='#homotopy'><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-Homotopy</a></li>
+<li><a href='#HomotopyTheory'>Homotopy theory of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-spaces</a></li>
+<li><a href='#InfGTop'><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(\infty,1)</annotation></semantics></math>-category of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-equivariant spaces</a></li>
+<li><a href='#global_equivariant_homotopy_theory'>Global equivariant homotopy theory</a></li>
+</ul>
+<li><a href='#in_more_general_model_categories'>In more general model categories</a></li>
+<ul>
+<li><a href='#in_stack_toposes'>In <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>∞</mn></mrow><annotation encoding="application/x-tex">\infty</annotation></semantics></math>-stack <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(\infty,1)</annotation></semantics></math>-toposes</a></li>
+</ul>
+<li><a href='#Properties'>Properties</a></li>
+<ul>
+<li><a href='#topos'><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(\infty,1)</annotation></semantics></math>-topos</a></li>
+<li><a href='#stabilization'>Stabilization</a></li>
+<li><a href='#RelationToInfinityActions'>Relation to ∞-Actions (fine and coarse equivariance)</a></li>
+</ul>
+<li><a href='#examples'>Examples</a></li>
+<ul>
+<li><a href='#equivariance'><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mn>1</mn></msup></mrow><annotation encoding="application/x-tex">S^1</annotation></semantics></math>-Equivariance</a></li>
+</ul>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p>Equivariant homotopy theory is <a class="existingWikiWord" href="/nlab/show/homotopy+theory">homotopy theory</a> for the case that a <a class="existingWikiWord" href="/nlab/show/group">group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/action">acts</a> on all the <a class="existingWikiWord" href="/nlab/show/topological+spaces">topological spaces</a> or other objects involved, hence the homotopy theory of <a class="existingWikiWord" href="/nlab/show/topological+G-spaces">topological G-spaces</a>.</p>
@@ -1023,6 +1051,12 @@ margin-left: 0em;
 <li id="Waner80"><a class="existingWikiWord" href="/nlab/show/Stefan+Waner">Stefan Waner</a>, <em>Equivariant Homotopy Theory and Milnor’s Theorem</em>, Transactions of the American Mathematical Society Vol. 258, No. 2 (Apr., 1980), pp. 351-368 (<a href="http://www.jstor.org/stable/1998061">JSTOR</a>)</li>
 </ul>
 
+<p>Specifically with an eye towards equivariant <a class="existingWikiWord" href="/nlab/show/differential+topology">differential topology</a> (such as <a class="existingWikiWord" href="/nlab/show/Pontryagin-Thom+construction">Pontryagin-Thom construction</a> for <a class="existingWikiWord" href="/nlab/show/equivariant+cohomotopy">equivariant cohomotopy</a>):</p>
+
+<ul>
+<li id="Wasserman69"><a class="existingWikiWord" href="/nlab/show/Arthur+Wasserman">Arthur Wasserman</a>, <em>Equivariant differential topology</em>, Topology Vol. 8, pp. 127-150, 1969 (<a href="https://web.math.rochester.edu/people/faculty/doug/otherpapers/wasserman.pdf">pdf</a>)</li>
+</ul>
+
 <p>Discussion in the context of <a class="existingWikiWord" href="/nlab/show/global+equivariant+homotopy+theory">global equivariant homotopy theory</a> is in</p>
 
 <ul>
@@ -1040,14 +1074,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 14, 2018 at 14:37:28.
+  Last revised on November 22, 2018 at 02:00:12.
   See the <a href="https://ncatlab.org/nlab/history/equivariant homotopy theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/equivariant+homotopy+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+homotopy+theory/41" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(41 revisions)</span> | <a href="/nlab/show/diff/equivariant+homotopy+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+homotopy+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/equivariant+homotopy+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+homotopy+theory/42" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(42 revisions)</span> | <a href="/nlab/show/diff/equivariant+homotopy+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+homotopy+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/equivariant homotopy theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
