--- a/pages/8771.html
+++ b/pages/8771.html
@@ -355,6 +355,10 @@ margin-left: 0em;
 <li>
 <p>The <a class="existingWikiWord" href="/nlab/show/tropical+semiring">tropical algebra</a> and the <a class="existingWikiWord" href="/nlab/show/max-plus+algebra">max-plus algebra</a> are idempotent semirings.</p>
 </li>
+
+<li>
+<p>Given an idempotent semiring <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi></mrow><annotation encoding="application/x-tex">R</annotation></semantics></math> one can form the <strong>weak interval extension</strong> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>I</mi><mo stretchy="false">(</mo><mi>R</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">I(R)</annotation></semantics></math>. This is the idempotent semiring defined on all close <a class="existingWikiWord" href="/nlab/show/interval">intervals</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy="false">]</mo><mo>=</mo><mo stretchy="false">{</mo><mi>z</mi><mo>∈</mo><mi>R</mi><mo lspace="mediummathspace" rspace="mediummathspace">∣</mo><mi>x</mi><mo>≤</mo><mi>z</mi><mo>≤</mo><mi>y</mi><mo stretchy="false">}</mo></mrow><annotation encoding="application/x-tex">[x, y] = \{ z \in R \mid x \leq z \leq y \}</annotation></semantics></math> by the operations <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy="false">]</mo><mo>+</mo><mo stretchy="false">[</mo><mi>x</mi><mo>′</mo><mo>,</mo><mi>y</mi><mo>′</mo><mo stretchy="false">]</mo><mo>=</mo><mo stretchy="false">[</mo><mi>x</mi><mo>+</mo><mi>x</mi><mo>′</mo><mo>,</mo><mi>y</mi><mo>+</mo><mi>y</mi><mo>′</mo><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">[x, y] + [x', y'] = [x + x', y + y']</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy="false">]</mo><mo>⋅</mo><mo stretchy="false">[</mo><mi>x</mi><mo>′</mo><mo>,</mo><mi>y</mi><mo>′</mo><mo stretchy="false">]</mo><mo>=</mo><mo stretchy="false">[</mo><mi>x</mi><mo>⋅</mo><mi>x</mi><mo>′</mo><mo>,</mo><mi>y</mi><mo>⋅</mo><mi>y</mi><mo>′</mo><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">[x, y] \cdot [x', y'] = [x \cdot x', y \cdot y']</annotation></semantics></math>. The multiplicative unit is given by <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><mn>1</mn><mo>,</mo><mn>1</mn><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">[1,1]</annotation></semantics></math> and, if <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi></mrow><annotation encoding="application/x-tex">R</annotation></semantics></math> has an additive unit <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>0</mn></mrow><annotation encoding="application/x-tex">0</annotation></semantics></math>, an additive unit is given by <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><mn>0</mn><mo>,</mo><mn>0</mn><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">[0,0]</annotation></semantics></math>.</p>
+</li>
 </ul>
 
 <h2 id="related_concepts">Related concepts</h2>
@@ -364,7 +368,7 @@ margin-left: 0em;
 
 <li><a class="existingWikiWord" href="/nlab/show/rig">rig</a></li>
 
-<li><span class="newWikiWord">idempotent semifield<a href="/nlab/new/idempotent+semifield">?</a></span></li>
+<li><a class="existingWikiWord" href="/nlab/show/idempotent+semifield">idempotent semifield</a></li>
 </ul>
 </body></html>
 
@@ -372,14 +376,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 19, 2018 at 07:32:35.
+  Last revised on November 22, 2018 at 08:50:24.
   See the <a href="https://ncatlab.org/nlab/history/idempotent semiring" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/idempotent+semiring" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/idempotent+semiring/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/idempotent+semiring" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/idempotent+semiring" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/idempotent+semiring" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/idempotent+semiring/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/idempotent+semiring" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/idempotent+semiring" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/idempotent semiring/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
