--- a/pages/4955.html
+++ b/pages/4955.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8987/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8987/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -579,7 +579,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Euler-Lagrange+equation">Euler-Lagrange equation</a>, <a class="existingWikiWord" href="/nlab/show/de+Donder-Weyl+formalism">de Donder-Weyl formalism</a>,</p>
+<p><a class="existingWikiWord" href="/nlab/show/Euler-Lagrange+equation">Euler-Lagrange equation</a>, <span class="newWikiWord">de Donder-Weyl formalism<a href="/nlab/new/de+Donder-Weyl+formalism">?</a></span>,</p>
 </li>
 
 <li>
@@ -815,6 +815,10 @@ A[ [x] ] &amp; \underset{\delta}{\to} &amp; A[ [x] ] \otimes_A D
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/total+derivative">total derivative</a></p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-category+theory">(∞,1)-</a><a class="existingWikiWord" href="/nlab/show/categorification">categorification</a>: <a class="existingWikiWord" href="/nlab/show/Goodwillie+chain+rule">Goodwillie chain rule</a></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -831,7 +835,7 @@ A[ [x] ] &amp; \underset{\delta}{\to} &amp; A[ [x] ] \otimes_A D
 <li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Chain_rule">Chain rule</a></em></li>
 </ul>
 
-<p>On the <span class="newWikiWord">Goodwillie chain rule<a href="/nlab/new/Goodwillie+chain+rule">?</a></span> in <a class="existingWikiWord" href="/nlab/show/Goodwillie+calculus">Goodwillie calculus</a>:</p>
+<p>On the <a class="existingWikiWord" href="/nlab/show/Goodwillie+chain+rule">Goodwillie chain rule</a> in <a class="existingWikiWord" href="/nlab/show/Goodwillie+calculus">Goodwillie calculus</a>:</p>
 
 <ul>
 <li>
@@ -850,14 +854,14 @@ A[ [x] ] &amp; \underset{\delta}{\to} &amp; A[ [x] ] \otimes_A D
 
 <div class="revisedby">
   <p>
-  Last revised on October 14, 2018 at 19:34:55.
+  Last revised on November 23, 2018 at 05:56:13.
   See the <a href="https://ncatlab.org/nlab/history/chain rule" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/chain+rule" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/chain+rule/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/chain+rule" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/chain+rule" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/chain+rule" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/chain+rule/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/chain+rule" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/chain+rule" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/chain rule/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
