--- a/pages/3522.html
+++ b/pages/3522.html
@@ -679,6 +679,8 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
+<p>Goodwillie calculus is an <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-category+theory">(∞,1)-</a><a class="existingWikiWord" href="/nlab/show/categorification">categorification</a> of <a class="existingWikiWord" href="/nlab/show/differential+calculus">differential calculus</a>, where <a class="existingWikiWord" href="/nlab/show/smooth+functions">smooth functions</a> between <a class="existingWikiWord" href="/nlab/show/Cartesian+spaces">Cartesian spaces</a> are replaced by <a class="existingWikiWord" href="/nlab/show/topological+functors">topological functors</a> between <a class="existingWikiWord" href="/nlab/show/categories">categories</a> of <a class="existingWikiWord" href="/nlab/show/pointed+topological+spaces">pointed topological spaces</a>.</p>
+
 <h3 id="as_an_approximation_to_stabilization_of_a_functor">As an approximation to stabilization of a functor</h3>
 
 <p>The operation of <a class="existingWikiWord" href="/nlab/show/stabilization">stabilization</a> that sends an <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-category">(∞,1)-category</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math> to the <a class="existingWikiWord" href="/nlab/show/stable+%28%E2%88%9E%2C1%29-category">stable (∞,1)-category</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Stab</mi><mo stretchy="false">(</mo><mi>C</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Stab(C)</annotation></semantics></math> does not in general extend to a functor.</p>
@@ -1104,14 +1106,14 @@ e^{x - 1} \cdot e^{-\frac{(x - 1)^2}{2}} \cdot e^{\frac{(x - 1)^3}{3}} \ldots = 
 
 <div class="revisedby">
   <p>
-  Last revised on November 23, 2018 at 05:46:04.
+  Last revised on November 23, 2018 at 06:01:23.
   See the <a href="https://ncatlab.org/nlab/history/Goodwillie calculus" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Goodwillie+calculus" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Goodwillie+calculus/53" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(53 revisions)</span> | <a href="/nlab/show/diff/Goodwillie+calculus" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Goodwillie+calculus" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Goodwillie+calculus" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Goodwillie+calculus/54" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(54 revisions)</span> | <a href="/nlab/show/diff/Goodwillie+calculus" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Goodwillie+calculus" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Goodwillie calculus/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
