--- a/pages/7673.html
+++ b/pages/7673.html
@@ -605,7 +605,9 @@ margin-left: 0em;
 
 <p>The way this is generally dealt with is to introduce a category-theoretic structure which does have a “substitution” operation which is strictly associative, hence does correspond directly to type theory, and then show that any category can be “strictified” into such a stricter structure. Unfortunately, there are many different such structures which have been used, differing only slightly. On this page we define and compare them all.</p>
 
-<p>One of these structures is called “contextual categories” (definition <a class="maruku-ref" href="#ContextualCategory"></a> below). This and other kinds of categories-with-extra-structure may hence be thought of as stand-ins for the <a class="existingWikiWord" href="/nlab/show/syntax">syntax</a> of a <a class="existingWikiWord" href="/nlab/show/type+theory">type theory</a>:</p>
+<p>One of these structures is called “contextual categories” (definition <a class="maruku-ref" href="#ContextualCategory"></a> below).</p>
+
+<p id="StandInForSyntax"> This and other kinds of categories-with-extra-structure may hence be thought of as stand-ins for the <a class="existingWikiWord" href="/nlab/show/syntax">syntax</a> of a <a class="existingWikiWord" href="/nlab/show/type+theory">type theory</a>:</p>
 
 <blockquote>
 <p>Rather than constructing an interpretation of the syntax directly, we may work via the intermediary notion of contextual categories, a class of algebraic objects abstracting the key structure carried by the syntax. The plain definition of a contextual category corresponds to the structural core of the syntax; further syntactic rules (logical constructors, etc.) correspond to extra algebraic structure that contextual categories may carry. Essentially, contextual categories provide a completely equivalent alternative to the syntactic presentation of type theory.</p>
@@ -1160,14 +1162,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 12, 2018 at 12:46:45.
+  Last revised on November 24, 2018 at 04:08:51.
   See the <a href="https://ncatlab.org/nlab/history/categorical model of dependent types" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/categorical+model+of+dependent+types" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/categorical+model+of+dependent+types/41" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(41 revisions)</span> | <a href="/nlab/show/diff/categorical+model+of+dependent+types" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/categorical+model+of+dependent+types" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/categorical+model+of+dependent+types" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/categorical+model+of+dependent+types/42" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(42 revisions)</span> | <a href="/nlab/show/diff/categorical+model+of+dependent+types" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/categorical+model+of+dependent+types" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/categorical model of dependent types/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
