--- a/pages/17682.html
+++ b/pages/17682.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9303/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -321,6 +321,10 @@ margin-left: 0em;
 <h2 id="idea">Idea</h2>
 
 <p>A number of researchers have proposed that the <a class="existingWikiWord" href="/nlab/show/category+theory">category theoretic</a> concept of <a class="existingWikiWord" href="/nlab/show/monads">monads</a> may play a role in understanding semantic and pragmatic issues in the use of natural language.</p>
+
+<blockquote>
+<p>Side effects are to programming languages what pragmatics are to natural languages: they both study how expressions interact with the worlds of their users. It might then come as no surprise that phenomena such as anaphora, presupposition, deixis and conventional implicature yield a monadic description. (<a href="#MarAmb16">Maršík Amblard 2016, p. 3</a>)</p>
+</blockquote>
 
 <p>In an overview paper <a href="#Asudeh">Asudeh</a>, it is proposed that the following topics are explained by specific monads:</p>
 
@@ -387,7 +391,7 @@ margin-left: 0em;
 <ul>
 <li>Jirka Maršík, Maxime Amblard, <em>Algebraic Effects and Handlers in Natural Language Interpretation</em>, <a href="https://hal.archives-ouvertes.fr/hal-01079206/file/effects-paper.pdf">pdf</a></li>
 
-<li>Jirka Maršík, Maxime Amblard, <em>Introducing a Calculus of Effects and Handlers for Natural Language Semantics</em>, <a href="https://arxiv.org/abs/1606.06125">arXiv:1606.06125</a></li>
+<li id="MarAmb16">Jirka Maršík, Maxime Amblard, <em>Introducing a Calculus of Effects and Handlers for Natural Language Semantics</em>, <a href="https://arxiv.org/abs/1606.06125">arXiv:1606.06125</a></li>
 </ul>
 
 <p>The weaker notion of <a class="existingWikiWord" href="/nlab/show/applicative+functors">applicative functors</a> has also been used:</p>
@@ -405,14 +409,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  5, 2018 at 07:24:12.
+  Last revised on November 24, 2018 at 06:59:12.
   See the <a href="https://ncatlab.org/nlab/history/monad (in linguistics)" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/monad+%28in+linguistics%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/monad+%28in+linguistics%29/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/monad+%28in+linguistics%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/monad+%28in+linguistics%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/monad+%28in+linguistics%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/monad+%28in+linguistics%29/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/monad+%28in+linguistics%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/monad+%28in+linguistics%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/monad (in linguistics)/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
